# mavi-y

./: .env.example  PANDUAN_PENGGUNAAN.md  analyze_return.js  check_balance.js  count_braces.cjs  count_braces.js  count_divs.js  debug_i18n_full.mjs  debug_values.mjs  div_report.json  find_extra_closings.js  find_unclosed.js  fix_divs.js  fix_structure.js  fix_translations.mjs  generate_div_report.js  generate_keys.js  generate_license.js  index.html  keygen.sh  mavi_keygen.js  mavi_keygen_web.html  package-lock.json  package.json  playwright.config.js  supabase_license_schema.sql  supabase_setup.sql  test_translations.mjs  vite.config.js
KeyGenDesktop/: index.html  package-lock.json  package.json
KeyGenDesktop/src-tauri/: Cargo.toml  tauri.conf.json
public/: key-generator.html  pitch-deck.html
public/sqlite-wasm/: index.d.mts  index.mjs  node.mjs  sqlite3-opfs-async-proxy.js  sqlite3-worker1.mjs
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIProcessWorkspace.jsx  ActionRecognition.jsx  AdminLanguageControl.jsx  AdminLicenseManager.jsx  AdminPanel.jsx  AdminYouTubeManager.jsx  AllowanceCalculator.jsx  AnalysisDashboard.jsx  BestWorstCycle.jsx  ComparisonDashboard.jsx  CycleAggregation.jsx  CycleTimeAnalysis.jsx  DashboardWidgets.jsx  DigitalTwinSimulator.jsx  ElementEditor.jsx  ElementRearrangement.jsx  ErgoCopilot.jsx  ErgonomicAnalysis.jsx  ErrorBoundary.jsx  FileExplorer.jsx  (+49 more)
tests/: smoke.spec.js
(+152 files in other folders)
